--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.28",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
